--- a/stories/1Introduction.stories.mdx
+++ b/stories/1Introduction.stories.mdx
@@ -1,33 +1,30 @@
-import { Meta } from '@storybook/addon-docs';
-import Code from './assets/code-brackets.svg';
-import Colors from './assets/colors.svg';
-import Comments from './assets/comments.svg';
-import Direction from './assets/direction.svg';
-import Flow from './assets/flow.svg';
-import Plugin from './assets/plugin.svg';
-import Repo from './assets/repo.svg';
-import StackAlt from './assets/stackalt.svg';
-import css from './assets/styles.css';
+import { Meta } from "@storybook/addon-docs";
+import Code from "./assets/code-brackets.svg";
+import Colors from "./assets/colors.svg";
+import Comments from "./assets/comments.svg";
+import Direction from "./assets/direction.svg";
+import Flow from "./assets/flow.svg";
+import Plugin from "./assets/plugin.svg";
+import Repo from "./assets/repo.svg";
+import StackAlt from "./assets/stackalt.svg";
+import css from "./assets/styles.css";
 
 <Meta title="Introduction" />
 
 # Welcome to React Cashmere
 
 React Cashmere is a library of common components that will help aid in the development of HealthCatalyst React based applications.
-This libraries core components are based on [Material UI v5.8.6](https://mui.com/material-ui/getting-started/overview/) and then restyled using [Fiber.Cashmere](https://cashmere.healthcatalyst.net/home) mixins. 
+This libraries core components are based on [Material UI v5.8.6](https://mui.com/material-ui/getting-started/overview/) and then restyled using [Fiber.Cashmere](https://cashmere.healthcatalyst.net/home) mixins.
 
 Browse example stories now by navigating to them in the sidebar.
+
 <span className="tip">Tip</span>
 View a stories code in the `docs` tab to learn how they work.
-
 
 <div className="subheading">Configure</div>
 
 <div className="link-list">
-  <a
-    className="link-item"
-    href="?path=/docs/getting-started--page"
-  >
+  <a className="link-item" href="?path=/docs/getting-started--page">
     <img src={Plugin} alt="plugin" />
     <span>
       <strong>Getting started with React Cashmere</strong>
@@ -57,7 +54,11 @@ View a stories code in the `docs` tab to learn how they work.
       Configure, customize, and extend
     </span>
   </a>
-  <a className="link-item" href="https://github.com/storybookjs/storybook" target="_blank">
+  <a
+    className="link-item"
+    href="https://github.com/storybookjs/storybook"
+    target="_blank"
+  >
     <img src={Code} alt="code" />
     <span>
       <strong>Storybook GitHub project</strong>
@@ -65,4 +66,3 @@ View a stories code in the `docs` tab to learn how they work.
     </span>
   </a>
 </div>
-
