fix getting started link.

--- a/stories/Introduction.stories.mdx
+++ b/stories/Introduction.stories.mdx
@@ -28,7 +28,7 @@ View a stories code in the `docs` tab to learn how they work.
 <div className="subheading">Getting Started</div>
 
 <div className="link-list">
-  <a className="link-item" href="?path=/docs/getting-started--page">
+  <a className="link-item" href="index.html?path=/docs/getting-started--page">
     <img src={Repo} alt="repo" />
     <span>
       <strong>Getting started with React Cashmere</strong>
