--- a/stories/GettingStarted.stories.mdx
+++ b/stories/GettingStarted.stories.mdx
@@ -25,57 +25,102 @@ npx create-react-app my-app
 Install the peer dependencies (You will need React `17.x.x|18.x.x` and Material UI `5.x.x`)
 
 ```shell
-npm install --save @emotion/styled @mui/lab @mui/material sass
+npm install --save @mui/lab @mui/material
 ```
 
-Now you can install React Cashmere
+Now you can install React Cashmere and fonts
 
 ```
 npm install --save @healthcatalyst/react-cashmere
+
+# optional install fonts and icons sets
+npm install --save sass font-awesome notosans-fontface @healthcatalyst/cashmere
 ```
 
-<div className="subheading">Hello World</div>
+## Adding Fonts
+
+Create a sass file to import the desired fonts. These fonts are optional if your app does not need them and you can skip the font install step.
+
+
+```scss
+/* src/fonts.scss */
+$fa-font-path: "~font-awesome/fonts";
+@import "~font-awesome/scss/font-awesome";
+
+$notosans-fontface-path: "~notosans-fontface/fonts";
+@import "~notosans-fontface/scss/notosans-fontface-allweight";
+
+$hc-icons-font-path: "~@healthcatalyst/cashmere/hcicons";
+@import "~@healthcatalyst/cashmere/hcicons/hcicons";
+```
+
+<div className="subheading">ThemeProvider</div>
 
 Now you are ready to wrap your app with the ThemeProvider higher order component.
 The ThemeProvider will take care of all the cashmere styling so you can use most of the Material UI component as usual.
 
 ```jsx
 /* src/index.js */
-import React from "react";
+import React from 'react';
+import ReactDOM from 'react-dom/client';
+import App from './App';
 import { ThemeProvider, themes } from "@healthcatalyst/react-cashmere";
-import App from "./App";
-
+import "./fonts.scss";
 const [lightTheme, darkTheme] = themes;
 
-export default (props) => {
-  return (
+const root = ReactDOM.createRoot(document.getElementById('root'));
+root.render(
+  <React.StrictMode>
     <ThemeProvider theme={lightTheme}>
       <App />
     </ThemeProvider>
-  );
-};
+  </React.StrictMode>
+);
 ```
 
 ```jsx
 /* src/App.js */
 import React from "react";
 import Typography from "@mui/material/Typography";
+import Box from "@mui/material/Box";
 import Button from "@mui/material/Button";
-import { Navbar } from "@healthcatalyst/react-cashmere";
 
-export default (props) => {
+import { Icon, Navbar } from "@healthcatalyst/react-cashmere";
+
+const App = (props) => {
   return (
-    <>
-      <Typography variant="h1">Hello World</Typography>
+    <Box mt={"53px"} p={2}>
+      <Navbar
+        position="fixed"
+        appIcon="My App"
+        brandIcon={<Icon size="large" icon={"hci-catalyst-logo"} />}
+        linkContent={[]}
+        rightContent={<Box p={2}>Welcome, User!</Box>}
+      />
+      <Typography variant="h1" pb={2}>
+        Hello Cashmere!
+      </Typography>
       <Typography variant="subheading1">
-        This is a beautiful app using Material UI and Cashmere
+        This app is using React, Material UI and themed with Cashmere.
+      </Typography>
+      <Typography variant="h2" pt={3}>
+        Butons
       </Typography>
       <Button color="primary">Button</Button>
-      <Button color="primary-alt">Button</Button>
+      &nbsp;
       <Button color="secondary">Button</Button>
-    </>
+      <Typography variant="h2" pt={3}>
+        Icons
+      </Typography>
+      Font Awesome: <Icon size="large" icon={"fa-cog"} />
+      <br />
+      Health Catalyst Icons: <Icon size="large" icon={"hci-catalyst-logo"} />
+      <br />
+    </Box>
   );
 };
+
+export default App;
 ```
 
 export const Component = () => {
