docs(fonts): clarify fonts/icon sets are optional

--- a/stories/GettingStarted.stories.mdx
+++ b/stories/GettingStarted.stories.mdx
@@ -65,7 +65,7 @@ import React from 'react';
 import ReactDOM from 'react-dom/client';
 import App from './App';
 import { ThemeProvider, themes } from "@healthcatalyst/react-cashmere";
-import "./fonts.scss";
+import "./fonts.scss"; /* optional scss fonts import */
 const [lightTheme, darkTheme] = themes;
 
 const root = ReactDOM.createRoot(document.getElementById('root'));
